# build-fluidicity

./: Dockerfile  LICENSE  README.md  build.sh  build_docker_container.sh  pyproject.toml  run_container.sh  test.sh
examples/: clean_example.py  simple_example.py  simplest_example.py
src/build_fluidicity/: builder.py
src/build_fluidicity_jdglazer/: builder.py  compilers.py  exceptions.py  loaders.py  targets.py  utils.py
tests/: builder_test.py  compilers_test.py  loaders_test.py  targets_test.py  test_utils.py
