[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "build_fluidicity_jdglazer"
version = "0.0.1"
authors = [
  { name="Joshua Glazer", email="atrail2014@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/jdglazer/build-fluidicity"
#Issues = "https://github.com/pypa/sampleproject/issues"